# TMaxOS-Fork

./: README.md
acpid_2.0.31.orig/acpid-2.0.31/: Changelog  Makefile.am  Makefile.in  TESTPLAN  acpi_listen.c  acpid.8  acpid.c  acpid.h  config.h  config.h.in  configure  configure.ac  event.c  inotify_handler.c  input_layer.c  libnetlink.c  log.c  log.h  netlink.c  proc.c  sock.c  ud_socket.c
acpid_2.0.31.orig/acpid-2.0.31/kacpimon/: Makefile.am  Makefile.in  connection_list.c  kacpimon.8  libnetlink.c  libnetlink.h
acpid_2.0.31.orig/acpid-2.0.31/samples/powerbtn/: powerbtn.sh
convmv_2.05.orig/convmv-2.05/: CREDITS  Changes  Makefile  SHA256sums  TODO  testsuite.tar
java-common_0.71/java-common-0.71/debian/: changelog  control  copyright  java_defaults.mk  rules
java-common_0.71/java-common-0.71/scripts/: update-java-alternatives.8
java-common_0.71/java-common-0.71/scripts/completion/: update-java-alternatives
libisoburn_1.5.0.orig/libisoburn-1.5.0/: AUTHORS  COPYRIGHT  ChangeLog  Makefile.am  Makefile.in  README  TODO  acinclude.m4  aclocal.m4  bootstrap  configure  configure.ac  libisoburn-1.pc.in  ltmain.sh  version.h.in
libisoburn_1.5.0.orig/libisoburn-1.5.0/doc/: comments  doxygen.conf.in  partition_offset.wiki  qemu_xorriso.wiki
libisoburn_1.5.0.orig/libisoburn-1.5.0/frontend/: frontend_pipes_xorriso.c  grub-mkrescue-sed.sh  sh_on_named_pipes.sh  xorriso-tcltk  xorriso_broker.sh
libisoburn_1.5.0.orig/libisoburn-1.5.0/libisoburn/: burn_wrap.c  data_source.c  isoburn.c  isoburn.h  isofs_wrap.c  libisoburn.h  libisoburn.ver
libisoburn_1.5.0.orig/libisoburn-1.5.0/releng/: README  auto_cxx  run_all_auto
libisoburn_1.5.0.orig/libisoburn-1.5.0/releng/inc/: releng_getopts.inc
libisoburn_1.5.0.orig/libisoburn-1.5.0/test/: compare_file.c
libisoburn_1.5.0.orig/libisoburn-1.5.0/xorriso/: README_gnu_xorriso  aux_objects.h  base_obj.c  changelog.txt  check_media.c  check_media.h  cmp_update.c  disk_ops.c  disk_ops.h  drive_mgt.c  emulators.c  filters.c  findjob.c  findjob.h  iso_img.c  iso_img.h  iso_manip.c  iso_manip.h  iso_tree.c  iso_tree.h  lib_mgt.c  make_docs.sh  make_xorriso_1.c  match.c  misc_funct.c  misc_funct.h  opts_a_c.c  opts_d_h.c  opts_p_z.c  parse_exec.c  parse_exec.h  read_run.c  sfile.c  sfile.h  sort_cmp.c  text_io.c  text_io.h  write_run.c  write_run.h  xorrecord.1  (+16 more)
manpages_4.16.orig/man-pages-4.16/: proj.man-pages.desc  proj.man-pages.pages
manpages_4.16.orig/man-pages-4.16/man1/: getent.1  iconv.1  intro.1  ldd.1  locale.1  localedef.1  memusage.1  memusagestat.1  mtrace.1  pldd.1  sprof.1  time.1
manpages_4.16.orig/man-pages-4.16/man2/: _exit.2  _syscall.2  accept.2  access.2  acct.2  add_key.2  adjtimex.2  alarm.2  alloc_hugepages.2  arch_prctl.2  bdflush.2  bind.2  bpf.2  brk.2  cacheflush.2  capget.2  chmod.2  chown.2  chroot.2  clock_getres.2  clock_nanosleep.2  clone.2  close.2  connect.2  copy_file_range.2  create_module.2  delete_module.2  dup.2  epoll_create.2  epoll_ctl.2  epoll_wait.2  eventfd.2  execve.2  execveat.2  exit_group.2  fallocate.2  fanotify_init.2  fanotify_mark.2  fcntl.2  flock.2  (+221 more)
manpages_4.16.orig/man-pages-4.16/man3/: CPU_SET.3  INFINITY.3  MB_CUR_MAX.3  MB_LEN_MAX.3  __ppc_get_timebase.3  __ppc_set_ppr_med.3  __ppc_yield.3  __setfpucw.3  a64l.3  abort.3  abs.3  acos.3  acosh.3  addseverity.3  adjtime.3  aio_cancel.3  aio_error.3  aio_fsync.3  aio_init.3  aio_read.3  aio_return.3  aio_suspend.3  aio_write.3  alloca.3  argz_add.3  asin.3  asinh.3  asprintf.3  assert.3  assert_perror.3  atan.3  atan2.3  atanh.3  atexit.3  atof.3  atoi.3  backtrace.3  basename.3  bcmp.3  bcopy.3  (+533 more)
manpages_4.16.orig/man-pages-4.16/man4/: cciss.4  console_codes.4  cpuid.4  dsp56k.4  fd.4  full.4  fuse.4  hd.4  hpsa.4  initrd.4  intro.4  lirc.4  loop.4  lp.4  mem.4  mouse.4  msr.4  null.4  pts.4  ram.4  random.4  rtc.4  sd.4  sk98lin.4  smartpqi.4  st.4  tty.4  ttyS.4  vcs.4  veth.4  wavelan.4
manpages_4.16.orig/man-pages-4.16/man5/: acct.5  charmap.5  core.5  dir_colors.5  elf.5  filesystems.5  ftpusers.5  gai.conf.5  group.5  host.conf.5  hosts.5  hosts.equiv.5  intro.5  issue.5  locale.5  motd.5  networks.5  nologin.5  nscd.conf.5  nss.5  nsswitch.conf.5  passwd.5  proc.5  protocols.5  repertoiremap.5  resolv.conf.5  rpc.5  securetty.5  services.5  shells.5  slabinfo.5  sysfs.5  termcap.5  tmpfs.5  ttytype.5  tzfile.5  utmp.5
manpages_4.16.orig/man-pages-4.16/man6/: intro.6
manpages_4.16.orig/man-pages-4.16/man7/: aio.7  armscii-8.7  arp.7  ascii.7  attributes.7  boot.7  bootparam.7  capabilities.7  cgroup_namespaces.7  cgroups.7  charsets.7  complex.7  cp1251.7  cp1252.7  cpuset.7  credentials.7  ddp.7  environ.7  epoll.7  fanotify.7  feature_test_macros.7  fifo.7  futex.7  glob.7  hier.7  hostname.7  icmp.7  inode.7  inotify.7  intro.7  ip.7  ipv6.7  iso_8859-1.7  iso_8859-10.7  iso_8859-11.7  iso_8859-13.7  iso_8859-14.7  iso_8859-15.7  iso_8859-16.7  iso_8859-2.7  (+74 more)
manpages_4.16.orig/man-pages-4.16/man8/: iconvconfig.8  intro.8  ld.so.8  ldconfig.8  nscd.8  sln.8  tzselect.8  zdump.8  zic.8
msi/dlls/msi/: database.c  format.c  handle.c  install.c  msi.c  msipriv.h  msiquery.c  package.c  record.c  registry.c  source.c  suminfo.c  where.c
sssd_1.16.3.orig/sssd-1.16.3/: aclocal.m4  config.h.in  configure
sssd_1.16.3.orig/sssd-1.16.3/po/: bg.gmo  ca.gmo  de.gmo  es.gmo  eu.gmo  fr.gmo  hu.gmo  id.gmo  it.gmo  ja.gmo  nb.gmo  nl.gmo  pl.gmo  pt.gmo  pt_BR.gmo  ru.gmo  sv.gmo  tg.gmo  tr.gmo  uk.gmo  zh_CN.gmo  zh_TW.gmo
ufw_0.36.orig/ufw-0.36/: AUTHORS  ChangeLog  Makefile  README  README.design  README.translations  TODO  run_tests.sh  setup.cfg  setup.py  snapcraft.yaml
ufw_0.36.orig/ufw-0.36/conf/: ufw.defaults
ufw_0.36.orig/ufw-0.36/doc/: rsyslog.example  skel-ui.example  systemd.example  ufw-framework.8  ufw-on-snappy.8  ufw.8
ufw_0.36.orig/ufw-0.36/locales/po/: ar.po  (+40 more)
ufw_0.36.orig/ufw-0.36/snap-files/: ufw.completer.bash
ufw_0.36.orig/ufw-0.36/src/: common.py  ufw  ufw-init  ufw-init-functions
ufw_0.36.orig/ufw-0.36/tests/: test-srv-upgrades.sh  test-srv-upgrades.sh.expected  testlib.sh
(+400 files in other folders)
